Show earnings in new sale register

--- a/shipments-list.html
+++ b/shipments-list.html
@@ -292,7 +292,7 @@
                                             <option value="Cancelado">Cancelados</option>
                                         </select>
 
-                                        <label for="courierFilter">Enviados por: </label>
+                                        <label for="courierFilter">Paquetería: </label>
                                         <select name="courierFilter" class="form-control" ng-model="filter.courier">
                                             <option value="">Cualquiera</option>
                                             <option value="Estfeta">Estfeta</option>
