--- a/new-sale.html
+++ b/new-sale.html
@@ -350,6 +350,11 @@
                                             <input type="text" class="form-control" readonly ng-model="discount" ng-currency>
                                         </div>
                                     </div>
+                                    <div class="form-group form-inline col-xs-12 col-md-6">
+                                        <label for="earnings">Ganancia: </label>
+                                        <input type="text" class="form-control" readonly ng-model="earnings" ng-currency>
+
+                                    </div>
                                 </div>
 
                                 <h4>Pago</h4>
