--- a/new-sale.html
+++ b/new-sale.html
@@ -300,7 +300,7 @@
                                     </div>
                                     <div class="form-group col-xs-12 col-sm-6">
                                         <label for="telephone">Número Telefónico</label>
-                                        <input type="text" class="form-control" id="telephone" placeholder="123 1234567">
+                                        <input type="text" class="form-control" id="telephone" placeholder="(123) 123 4567">
                                     </div>
                                 </div>
 
@@ -308,6 +308,21 @@
                                     <div class="form-group col-xs-12">
                                         <label for="address">Dirección de Envío</label>
                                         <textarea class="form-control" id="address" rows="5"></textarea>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="form-group form-inline col-xs-12">
+                                        <input type="checkbox" name="hasAddressee" id="hasAddressee" ng-model="hasAddressee">
+                                        <label for="hasAddressee"> Recibe una persona diferente</label>
+
+                                        <div ng-show="hasAddressee">
+                                            <label for="addressee">Nombre:</label>
+                                            <input type="text" class="form-control" name="addressee" placeholder="Nombre de quien recibe">
+
+                                            <label for="addressee_phone">Teléfono: </label>
+                                            <input type="text" class="form-control" name="addressee_phone" placeholder="(123) 123 4567">
+                                        </div>
                                     </div>
                                 </div>
 
