--- a/sales-list.html
+++ b/sales-list.html
@@ -305,6 +305,14 @@
                                 </div>
                             </div>
 
+                            <div class="spinner" ng-show="isLoading">
+                                <div class="rect1"></div>
+                                <div class="rect2"></div>
+                                <div class="rect3"></div>
+                                <div class="rect4"></div>
+                                <div class="rect5"></div>
+                            </div>
+
                             <sale class="sale" ng-repeat="sale in sales | filter : filter | orderBy : orderBy"></sale>
 
                         </div>
